--- a/Examples/A4_bernoulli_poisson_process.ipynb
+++ b/Examples/A4_bernoulli_poisson_process.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,140 @@
    "metadata": {},
    "source": [
     "## 1 Bernoulli process"
+   ]
+  },
+  {
+   "source": [
+    "### Example 4.1.1\n",
+    "\n",
+    "A company specialises in chartering flights from Narnia.\n",
+    "The company is concerned about the rise in sky mermaids that have been spotted by the crew of the flights, as a collision could be disasterous.\n",
+    "The flight crew estimates that there is a 17% chance of spotting a sky mermaid during a flight.\n",
+    "\n",
+    "In 20XX, the company is scheduled to fly 18 flights from Narnia.\n",
+    "It may be assumed that the event of spotting a sky mermaid is independent of any other event, and that a Bernoulli process can be used to model the process.\n",
+    "\n",
+    "**(a)** State the model for the number of sky mermaids spotted in 20XX.\n",
+    "\n",
+    "**(b)** What is the probability four or fewer flights will spot sky mermaids in 20XX?\n",
+    "\n",
+    "**(c)** State the model for the first flight a sky mermaid will be spotted in 20XX.\n",
+    "\n",
+    "**(d)** What is the probability it will take seven or more flights to first spot a sky mermaid?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### (a)\n",
+    "\n",
+    "Let $X$ be a random variable that represents the number of times a sky mermaid is spotted during the flights from Narnia over the year.\n",
+    "Then $X$ is modelled by a **binomial distribution**, with parameters $n$ being the number of flights flown, and $p=0.17$, so $X \\sim B(18,0.17)$."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# number of trials\n",
+    "x = stats.binom(n=18, p=0.17)"
+   ]
+  },
+  {
+   "source": [
+    "#### (b)\n",
+    "\n",
+    "The probability $P(X \\leq x)$ for a binomial distribution is\n",
+    "\n",
+    "$$\n",
+    "P(X \\leq x) = F(x) = \\sum_{k = 0}^{x} \\binom{n}{k} p^{k} (1-p)^{n - k}.\n",
+    "$$\n",
+    "\n",
+    "So the probability four or fewer flights will spot sky mermaids in 20XX will be"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.821311"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "round(x.cdf(x=4), 6)"
+   ]
+  },
+  {
+   "source": [
+    "#### (c)\n",
+    "\n",
+    "Let $T$ be a random variable that represents that first flight from Narnia where a sky mermaid is spotted.\n",
+    "Then $T$ is modelled by a **geometric distribution**, with parameter $p=0.17$, so $T \\sim G(0.17)$."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first trial success\n",
+    "t = stats.geom(p=0.17)"
+   ]
+  },
+  {
+   "source": [
+    "#### (d)\n",
+    "\n",
+    "The probability $P(X \\leq x)$ for a geometric distribution is\n",
+    "\n",
+    "$$\n",
+    "P(X \\leq x) = F(x) =1 - (1 - p)^{x}.\n",
+    "$$\n",
+    "\n",
+    "The probability it will take seven or more flight to first spot a sky mermaid is given by\n",
+    "\n",
+    "$$P(Y \\geq 7) = 1 - P(Y \\leq 6) = 1 - F(6) = \\cdots$$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "round(1 - t.cdf(x=6), 6)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 9,
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.32694"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
    ]
   },
   {
@@ -301,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
