Updated notebooks with examples

--- a/Examples/A5_linear_transformations.ipynb
+++ b/Examples/A5_linear_transformations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "source": [
-    "# A5 Linear functions of a radnom variable"
+    "# A5 Linear functions of a random variable"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -352,7 +352,7 @@
     "then\n",
     "\n",
     "$$\n",
-    "C = \\frac{5}{9} (F-32) = \\frac{5}{9} F - \\frac{160}{9}\n",
+    "C = \\frac{5}{9} (F-32) = \\frac{5}{9} F - \\frac{160}{9}.\n",
     "$$\n",
     "\n",
     "The expected value $E(C) = a \\> E(F) + b = \\cdots$"
@@ -384,7 +384,7 @@
    "source": [
     "#### (b)\n",
     "\n",
-    "The variance $S(C) = |a| \\> S(F) = \\sqrt{a^{2} \\> V(X)} \\cdots$"
+    "The variance $S(C) = |a| \\> S(F) = \\sqrt{a^{2} \\> V(X)} = \\cdots$"
    ],
    "cell_type": "markdown",
    "metadata": {}
