--- a/Examples/A4_bernoulli_poisson_process.ipynb
+++ b/Examples/A4_bernoulli_poisson_process.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,6 +155,92 @@
      "metadata": {},
      "execution_count": 9
     }
+   ]
+  },
+  {
+   "source": [
+    "### Example 4.1.2\n",
+    "\n",
+    "The probability of success in each trial in a Bernoulli process is $0.25$.\n",
+    "\n",
+    "**(a)** What is the probability that the number of trials from one success to the next is greater than 2 but at most 3?\n",
+    "\n",
+    "**(b)** What is the probability that the number of trials from one success to the next is less than 4?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The number of trials from one success to the next, $T$, has a geometric distribution with parameter $p=0.25$."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# number of trial\n",
+    "t = stats.geom(p=0.25)"
+   ]
+  },
+  {
+   "source": [
+    "#### (a)\n",
+    "\n",
+    "The probability $P(2 < T \\leq 3) = p(3) = \\cdots$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.140625"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "t.pmf(k=3)"
+   ]
+  },
+  {
+   "source": [
+    "The probability $P(T < 4) = P(T \\leq 3) = F(3) = \\cdots$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.578125"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "t.cdf(x=3)"
    ]
   },
   {
@@ -416,6 +502,107 @@
    "source": [
     "# P(T>10)\n",
     "round(1 - t.cdf(x=10), 6)"
+   ]
+  },
+  {
+   "source": [
+    "### Example 4.2.3\n",
+    "\n",
+    "Suppose that online orders are placed randomly at a company’s website at an average rate of 1.5 every hour.\n",
+    "Assume that the arrivals of online orders may be modelled by a Poisson process.\n",
+    "\n",
+    "**(a)** What is the probability that the waiting time between successive online orders is between one and two hours?\n",
+    "\n",
+    "**(b)** What is the probability that there are more than two online orders placed in a two-hour interval?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### (a)\n",
+    "\n",
+    "The waiting time (in hours) between arrivals of successive online orders, $T$, has an exponential distribution with parameter $\\lambda=1.5$.\n",
+    "So, the probability that the waiting time between successive online orders is between one and two hours is given by"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# waiting time\n",
+    "t = stats.expon(loc=0, scale=1/1.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.173343"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "round(t.cdf(x=2) - t.cdf(x=1), 6)"
+   ]
+  },
+  {
+   "source": [
+    "#### (b)\n",
+    "\n",
+    "Arrivals of online orders may be modelled by a Poisson process with rate $\\lambda=1.5$ per hour.  \n",
+    "\n",
+    "So, $X$, the number of orders placed in two hours, has a Poisson distribution with parameter\n",
+    "\n",
+    "$$\n",
+    "\\lambda t = 1.5(2) = 3.\n",
+    "$$\n",
+    "\n",
+    "and the probability that there are more than two orders placed in a two-hour interval is equal to"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# number of events\n",
+    "x = stats.poisson(mu=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.57681"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "round(1 - x.cdf(x=2), 6)"
    ]
   }
  ],
