Batch upload, split nbs

--- a/Examples/Py_A4_bernoulli_poisson_process.ipynb
+++ b/Examples/Py_A4_bernoulli_poisson_process.ipynb
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# number of trial\n",
+    "# number of trials\n",
     "t = stats.geom(p=0.25)"
    ]
   },
@@ -218,6 +218,8 @@
   },
   {
    "source": [
+    "#### (b)\n",
+    "\n",
     "The probability $P(T < 4) = P(T \\leq 3) = F(3) = \\cdots$"
    ],
    "cell_type": "markdown",
