--- a/Examples/Py_A4_bernoulli_poisson_process.ipynb
+++ b/Examples/Py_A4_bernoulli_poisson_process.ipynb
@@ -172,6 +172,8 @@
   },
   {
    "source": [
+    "#### Declare the distribution\n",
+    "\n",
     "The number of trials from one success to the next, $T$, has a geometric distribution with parameter $p=0.25$."
    ],
    "cell_type": "markdown",
@@ -270,6 +272,13 @@
    ]
   },
   {
+   "source": [
+    "#### Declare the distributions"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -358,7 +367,7 @@
     "Ten minutes is equivalent to $1/6$ hours, so $P(T < 1/6)$ is\n",
     "\n",
     "$$\n",
-    "F\\bigg( \\frac{1}{6} \\bigg) = 1 - e^{-5 \\times \\frac{1}{6}}\n",
+    "F\\bigg( \\frac{1}{6} \\bigg) = 1 - e^{-5 \\times \\frac{1}{6}} = \\cdots\n",
     "$$"
    ]
   },
