--- a/Examples/Py_A5_linear_transformations.ipynb
+++ b/Examples/Py_A5_linear_transformations.ipynb
@@ -9,28 +9,18 @@
   },
   {
    "source": [
-    "def linear_mean(mu: float, a: float, b: float = 0) -> float:\n",
-    "    \"\"\"\n",
-    "    Returns the mean of a linear variable of another rv\n",
-    "    \"\"\"\n",
-    "    return a * mu + b"
+    "## Support functions"
    ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 6,
-   "outputs": []
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def linear_var(var: float, a: float) -> float:\n",
-    "    \"\"\"\n",
-    "    Returns the variance of a linear variable of another rv\n",
-    "    \"\"\"\n",
-    "    return a ** 2 * var"
+    "import m248_support as m248"
    ]
   },
   {
@@ -64,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,11 +65,11 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 3
     }
    ],
    "source": [
-    "linear_mean(mu=-5, a=7, b=-20)"
+    "m248.get_y_mean(x_mean=-5, a=7, b=-20)"
    ]
   },
   {
@@ -95,11 +85,11 @@
   },
   {
    "source": [
-    "linear_mean(mu=1, a=-3, b=20)"
+    "m248.get_y_mean(x_mean=1, a=-3, b=20)"
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -109,7 +99,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 4
     }
    ]
   },
@@ -144,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,11 +145,11 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 5
     }
    ],
    "source": [
-    "linear_var(var=74, a=-5)"
+    "m248.get_y_var(x_var=74, a=-5)"
    ]
   },
   {
@@ -186,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,11 +187,11 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 6
     }
    ],
    "source": [
-    "linear_var(var=4, a=3) ** (1/2)"
+    "m248.get_y_var(x_var=4, a=3) ** (1/2)"
    ]
   },
   {
@@ -232,7 +222,7 @@
     }
    ],
    "source": [
-    "linear_var(var=4, a=-3) ** (1/2)"
+    "m248.get_y_var(x_var=4, a=-3) ** (1/2)"
    ]
   },
   {
@@ -269,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,11 +270,11 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 8
     }
    ],
    "source": [
-    "round(linear_mean(mu=3.5, a=2.2, b=0), 6)"
+    "round(m248.get_y_mean(x_mean=3.5, a=2.2, b=0), 6)"
    ]
   },
   {
@@ -298,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -309,11 +299,11 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 9
     }
    ],
    "source": [
-    "round(linear_var(var=0.25, a=2.2), 6)"
+    "round(m248.get_y_var(x_var=0.25, a=2.2), 6)"
    ]
   },
   {
@@ -362,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -373,11 +363,11 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 10
     }
    ],
    "source": [
-    "round(linear_mean(mu=40, a=5/9, b=-160/9), 6)"
+    "round(m248.get_y_mean(x_mean=40, a=5/9, b=-160/9), 6)"
    ]
   },
   {
@@ -406,7 +396,7 @@
     }
    ],
    "source": [
-    "round(linear_var(var=16, a=5/9)**(0.5), 6)"
+    "round(m248.get_y_var(x_var=16, a=5/9)**(0.5), 6)"
    ]
   }
  ],
