--- a/Examples/Py_A05_linear_transformations.ipynb
+++ b/Examples/Py_A05_linear_transformations.ipynb
@@ -331,8 +331,6 @@
   },
   {
    "source": [
-    "#### (a)\n",
-    "\n",
     "If\n",
     "\n",
     "$$\n",
@@ -343,7 +341,14 @@
     "\n",
     "$$\n",
     "C = \\frac{5}{9} (F-32) = \\frac{5}{9} F - \\frac{160}{9}.\n",
-    "$$\n",
+    "$$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### (a)\n",
     "\n",
     "The expected value $E(C) = a \\> E(F) + b = \\cdots$"
    ],
@@ -374,7 +379,7 @@
    "source": [
     "#### (b)\n",
     "\n",
-    "The variance $S(C) = |a| \\> S(F) = \\sqrt{a^{2} \\> V(X)} = \\cdots$"
+    "The standard deviation $S(C) = |a| \\> S(F) = \\sqrt{a^{2} \\> V(X)} = \\cdots$"
    ],
    "cell_type": "markdown",
    "metadata": {}
