--- a/Examples/Py_B09_sampling_distribution_mean_total.ipynb
+++ b/Examples/Py_B09_sampling_distribution_mean_total.ipynb
@@ -1,33 +1,11 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# B9 Sampling distributions of the sample mean and totals"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -35,18 +13,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from m248_support import Standard_Normal, Normal\n",
+    "from m248_support import Normal\n",
     "from scipy import stats"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 1 Sampling distribution of the sample mean"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 9.1.1\n",
     "\n",
@@ -56,9 +36,7 @@
     "**(a)** What is the approximate distribution of the sample mean, $\\overline{X}_{50}$?\n",
     "\n",
     "**(b)** What is the probability that the sample mean will be less than 43 sweets?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -92,15 +70,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
     "Let $X_{i}$ represent the number of sweets in packet $i$. Then $X_{i} \\sim \\text{Poisson}(45)$.\n",
     "\n",
     "For a Poisson distribution with parameter $\\lambda$, both the mean and the variance are equal to $\\lambda$, and so when $X_{i} \\sim \\text{Poisson}(45)$, then $\\mu$ is"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -108,14 +86,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "45.0"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -123,11 +101,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "and $\\sigma$ is approximately"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -135,14 +113,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "6.7082"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -150,6 +128,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "By the Central Limit Theorem, the mean $\\overline{X}_n$ of large $n$ independent random variables each with mean $\\mu$ and standard deviation $\\sigma$ has distribution\n",
     "\n",
@@ -158,9 +138,7 @@
     "$$\n",
     "\n",
     "Therefore, $E(\\overline{X}_n)$ is"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -168,14 +146,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "45.0"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -183,11 +161,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "and $S(\\overline{X}_n)$ is approximately"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -195,14 +173,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.9487"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "execution_count": 8
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -210,11 +188,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "so that $\\overline{X}_n \\sim \\ldots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -222,8 +200,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Current model: N(45.0, 0.95^2)\n"
      ]
@@ -234,13 +212,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
     "The probability $P(\\overline{X}_{50} \\leq 43) = P(Z \\leq z)$, where $z =$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -248,14 +226,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "-2.11"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "execution_count": 10
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -263,11 +241,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Therefore, the probability $P(Z \\leq -2.11) = \\Phi (-2.11) = 1 - \\Phi (2.11) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -275,14 +253,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.0175"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -290,6 +268,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 7.1.2 (June 2020)\n",
     "\n",
@@ -300,9 +280,7 @@
     "**(a)** What is the approximate distribution of the sample mean, $\\overline{X}_{40}$?\n",
     "\n",
     "**(b)** Calculate the probability that the sample mean that the sample mean contents is less than 500 g."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -325,13 +303,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
     "The $E(\\overline{X}_{40}) = \\mu = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -339,14 +317,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "502"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -354,11 +332,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "and $S(\\overline{X}_{40}) = \\sigma / \\sqrt{n} = 5 / \\sqrt{40} = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -366,14 +344,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.7906"
       ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "execution_count": 15
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -381,11 +359,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "So $\\overline{X}_{40} \\sim \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -393,8 +371,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Current model: N(502, 0.79^2)\n"
      ]
@@ -405,13 +383,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
     "The probability $P(\\overline{X}_{40} \\leq 500) = P(Z \\leq z)$, where $z =$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -419,14 +397,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "-2.53"
       ]
      },
+     "execution_count": 17,
      "metadata": {},
-     "execution_count": 17
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -434,11 +412,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Therefore, the probability $P(Z \\leq -2.53) = \\Phi (-2.53) = 1 - \\Phi (2.53) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -446,14 +424,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.0057"
       ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "execution_count": 18
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -461,13 +439,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 2 Sampling distribution of the sample total"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 9.2.1 (U6.Ex24)\n",
     "\n",
@@ -478,11 +458,11 @@
     "**(a)** What is the distribution that models the time taken to complete a sheet, $T_{20}$?\n",
     "\n",
     "**(b)** What, approximately, is the probability that it takes less than 6 minutes to fill one of the sheets?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
@@ -493,9 +473,7 @@
     "$$\n",
     "T_{20} = W_{1} + W_{2} + \\cdots + W_{20}.\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -518,11 +496,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "So $E(T_{20}) = 20 E(X) \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -530,14 +508,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "300"
       ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "execution_count": 21
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -545,11 +523,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "and $S(T_{20}) = S(X) \\sqrt{20} \\simeq \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -557,14 +535,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "67.082"
       ]
      },
+     "execution_count": 22,
      "metadata": {},
-     "execution_count": 22
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -572,11 +550,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Also, by the corollary to the Central Limit Theorem, Distributional Result, the distribution of $T_{20}$ is approximately normal, so $T_{20} \\sim \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -584,8 +562,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Current model: N(300, 67.08^2)\n"
      ]
@@ -596,6 +574,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
@@ -606,9 +586,7 @@
     "$$\n",
     "\n",
     "where $z$ is"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -616,14 +594,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.89"
       ]
      },
+     "execution_count": 24,
      "metadata": {},
-     "execution_count": 24
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -631,11 +609,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "And so $P(T_{20} \\leq 360) = \\Phi (0.89) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -643,14 +621,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.8145"
       ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "execution_count": 25
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -658,13 +636,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "*Note, there's a slight discrepency compared to the text due to rounding.*"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 9.2.2 (June 2017)\n",
     "\n",
@@ -673,9 +653,7 @@
     "**(a)** What is the distribution that models the boxes of 30 bars, $T_{30}$?\n",
     "\n",
     "**(b)** Calculate the approximate probability that the total weight of chocolate bars in a box will exceed 1130 g."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -698,6 +676,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
@@ -710,9 +690,7 @@
     "$$\n",
     "\n",
     "where $E(T_{30}) = 30 E(W_{i}) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -720,14 +698,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1170"
       ]
      },
+     "execution_count": 28,
      "metadata": {},
-     "execution_count": 28
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -735,11 +713,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "and $S(T_{30}) = S(W_{i}) \\sqrt{30} = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -747,14 +725,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "21.9089"
       ]
      },
+     "execution_count": 29,
      "metadata": {},
-     "execution_count": 29
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -762,11 +740,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "So therefore, $T_{30} \\sim \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -774,8 +752,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Current model: N(1170, 21.91^2)\n"
      ]
@@ -786,13 +764,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
     "The approximate probability that the total weight of a box of thirty chocolate bars is greater than 1130 g is given by $P(T_{30} \\geq 1130) = P(Z \\geq z)$, where $z$ is"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -800,14 +778,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "-1.83"
       ]
      },
+     "execution_count": 31,
      "metadata": {},
-     "execution_count": 31
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -815,11 +793,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Therefore, $P(T_{30} \\geq 1130) = 1 - \\Phi (-1130) = \\Phi (1130) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -827,19 +805,40 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.9661"
       ]
      },
+     "execution_count": 32,
      "metadata": {},
-     "execution_count": 32
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "t.has_F(x=1130, greater_than=True)"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
