--- a/Examples/Py_B09_sampling_distribution_mean_total.ipynb
+++ b/Examples/Py_B09_sampling_distribution_mean_total.ipynb
@@ -137,7 +137,7 @@
     "\\overline{X}_n \\sim N \\bigg( \\mu, \\frac{\\sigma}{\\sqrt{n}} \\bigg).\n",
     "$$\n",
     "\n",
-    "Therefore, $E(\\overline{X}_n)$ is"
+    "Therefore, $E(\\overline{X}_{50})$ is"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and $S(\\overline{X}_n)$ is approximately"
+    "and $S(\\overline{X}_{50})$ is approximately"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "so that $\\overline{X}_n \\sim \\ldots$"
+    "so that $\\overline{X}_{50} \\sim \\ldots$"
    ]
   },
   {
