--- a/Examples/Py_A04_bernoulli_poisson_process.ipynb
+++ b/Examples/Py_A04_bernoulli_poisson_process.ipynb
@@ -24,6 +24,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 4.1.1\n",
     "\n",
@@ -41,19 +43,17 @@
     "**(c)** State the model for the first flight a sky mermaid will be spotted in 20XX.\n",
     "\n",
     "**(d)** What is the probability it will take seven or more flights to first spot a sky mermaid?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
     "Let $X$ be a random variable that represents the number of times a sky mermaid is spotted during the flights from Narnia over the year.\n",
     "Then $X$ is modelled by a **binomial distribution**, with parameters $n$ being the number of flights flown, and $p=0.17$, so $X \\sim B(18,0.17)$."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -66,6 +66,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
@@ -76,9 +78,7 @@
     "$$\n",
     "\n",
     "So the probability four or fewer flights will spot sky mermaids in 20XX will be"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -86,14 +86,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.821311"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -101,14 +101,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (c)\n",
     "\n",
     "Let $T$ be a random variable that represents that first flight from Narnia where a sky mermaid is spotted.\n",
     "Then $T$ is modelled by a **geometric distribution**, with parameter $p=0.17$, so $T \\sim G(0.17)$."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -121,6 +121,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (d)\n",
     "\n",
@@ -130,34 +132,32 @@
     "P(X \\leq x) = F(x) =1 - (1 - p)^{x}.\n",
     "$$\n",
     "\n",
-    "The probability it will take seven or more flight to first spot a sky mermaid is given by\n",
-    "\n",
-    "$$P(Y \\geq 7) = 1 - P(Y \\leq 6) = 1 - F(6) = \\cdots$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+    "The probability it will take seven or more flight to first spot a sky mermaid is given by"
+   ]
   },
   {
-   "source": [
-    "round(1 - t.cdf(x=6), 6)"
-   ],
    "cell_type": "code",
-   "metadata": {},
    "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.32694"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "round(1 - t.cdf(x=6), 6)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 4.1.2\n",
     "\n",
@@ -166,18 +166,16 @@
     "**(a)** What is the probability that the number of trials from one success to the next is greater than 2 but at most 3?\n",
     "\n",
     "**(b)** What is the probability that the number of trials from one success to the next is less than 4?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Declare the distribution\n",
     "\n",
     "The number of trials from one success to the next, $T$, has a geometric distribution with parameter $p=0.25$."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -190,13 +188,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
     "The probability $P(2 < T \\leq 3) = p(3) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -204,14 +202,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.140625"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -219,13 +217,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
     "The probability $P(T < 4) = P(T \\leq 3) = F(3) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -233,14 +231,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.578125"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -272,11 +270,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Declare the distributions"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -516,6 +514,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 4.2.3\n",
     "\n",
@@ -525,19 +525,17 @@
     "**(a)** What is the probability that the waiting time between successive online orders is between one and two hours?\n",
     "\n",
     "**(b)** What is the probability that there are more than two online orders placed in a two-hour interval?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
     "The waiting time (in hours) between arrivals of successive online orders, $T$, has an exponential distribution with parameter $\\lambda=1.5$.\n",
     "So, the probability that the waiting time between successive online orders is between one and two hours is given by"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -555,14 +553,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.173343"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -570,6 +568,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
@@ -582,9 +582,7 @@
     "$$\n",
     "\n",
     "and the probability that there are more than two orders placed in a two-hour interval is equal to"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -602,14 +600,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.57681"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -633,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
