--- a/Examples/Py_A06_population_quantiles.ipynb
+++ b/Examples/Py_A06_population_quantiles.ipynb
@@ -1,18 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# A6 Population quantiles"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 1 Population quantiles of discrete random variables"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -36,6 +36,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 6.1.1\n",
     "\n",
@@ -48,9 +50,7 @@
     "**(a)** What is the 0.35-quantile of $X$?\n",
     "\n",
     "**(b)** What is the 0.95-quantile of $X$?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -76,21 +76,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The $\\alpha$-quantile, $q_{\\alpha}$, of a discrete random variable $X$ is the smallest value of $x \\in X$ such that $F(x) \\geq \\alpha$."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
     "The $0.35$-quantile of $X$, $q_{0.35}$, is the smallest value of $x \\in X$ such that $F(x) \\geq 0.35$.\n",
     "So therefore the $0.35$-quantile will be"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -98,14 +98,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -113,36 +113,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
     "The $0.95$-quantile of $X$, $q_{0.95}$, is the smallest value of $x \\in X$ such that $F(x) \\geq 0.95$.\n",
     "So therefore the $0.95$-quantile will be"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
-   "source": [
-    "find_quantile(F=a_cdf, q=0.95)"
-   ],
    "cell_type": "code",
-   "metadata": {},
    "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "5"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "find_quantile(F=a_cdf, q=0.95)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Example 6.1.2\n",
     "\n",
@@ -155,41 +157,39 @@
     "**(a)** What is the interquartile range of $X$?\n",
     "\n",
     "**(b)** What is the median of $X$?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# declare a dict to hold the table\n",
     "a_cdf: dict = {}\n",
     "# declare a list for p\n",
     "F: list = [0.15] + [0.35] + [0.5] + [0.65] + [0.7] + [1]"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 6,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# append to dict\n",
     "for i in range(1, 7):\n",
     "    a_cdf[i] = F[i-1]"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 7,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
     "The interquartile range is $q_{0.75} - q_{0.25}$, so"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -197,14 +197,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "4"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "execution_count": 8
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -212,13 +212,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
     "The median, $q_{0.5}$, will be when $\\alpha=0.5$, so"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -226,14 +226,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -241,13 +241,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 2 Population quantiles of continuous random variables"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 6.2.1\n",
     "\n",
@@ -264,11 +266,11 @@
     "**(b)** the lower quartile, $q_{L}$, of $X$\n",
     "\n",
     "**(c)** the upper quartile, $q_{U}$, of $X$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "If\n",
     "\n",
@@ -281,9 +283,7 @@
     "$$\n",
     "q_{\\alpha} = \\frac{5}{5-4\\alpha}.\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -296,13 +296,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
     "The median, $q_{0.5}$, will be when $\\alpha=0.5$, so"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -310,14 +310,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1.666667"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -325,13 +325,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
     "The lower quartile, $q_{0.25}$, will be when $\\alpha=0.25$, so"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -339,14 +339,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1.25"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "execution_count": 12
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -354,13 +354,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (c)\n",
     "\n",
     "The upper quartile, $q_{0.75}$, will be when $\\alpha=0.75$, so"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -368,14 +368,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "2.5"
       ]
      },
+     "execution_count": 13,
      "metadata": {},
-     "execution_count": 13
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -383,13 +383,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 6.2.2"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The c.d.f. of a random variable $X$ is given by\n",
     "\n",
@@ -402,11 +404,11 @@
     "**(a)** the 0.9-quantile, $q_{0.9}$, of $X$\n",
     "\n",
     "**(a)** the 0.2-quantile, $q_{0.2}$, of $X$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "If\n",
     "\n",
@@ -419,79 +421,79 @@
     "$$\n",
     "q_{\\alpha} = \\sqrt{8 \\alpha + 1}.\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def quantile(a: float) -> float:\n",
     "    return ((8 * a) + 1) ** (0.5)"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 14,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
     "The 0.9-quantile, $q_{0.9}$, will be when $\\alpha=0.9$, so"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
-   "source": [
-    "round(quantile(a=0.9), 6)"
-   ],
    "cell_type": "code",
-   "metadata": {},
    "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "2.863564"
       ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "execution_count": 15
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "round(quantile(a=0.9), 6)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
     "The 0.2-quantile, $q_{0.9}$, will be when $\\alpha=0.2$, so"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
-   "source": [
-    "round(quantile(a=0.2), 6)"
-   ],
    "cell_type": "code",
-   "metadata": {},
    "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1.612452"
       ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "execution_count": 16
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "round(quantile(a=0.2), 6)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### 6.2.3 (Revised June 2020)\n",
     "\n",
@@ -509,11 +511,11 @@
     "**(a)** the median time, $m$, to serve a customer.\n",
     "\n",
     "**(b)** the interquartile range of the time taken to serve a customer."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "If\n",
     "\n",
@@ -526,9 +528,7 @@
     "$$\n",
     "q_{\\alpha} = \\sqrt{\\frac{4}{1-\\alpha}}.\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -541,13 +541,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
     "The median, $q_{0.5}$, will be when $\\alpha=0.5$, so"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -555,14 +555,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "2.828427"
       ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "execution_count": 18
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -570,13 +570,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
     "The interquartile range of $X$ is $q_{0.75} - q_{0.25}$, so"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -584,14 +584,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1.690599"
       ]
      },
+     "execution_count": 19,
      "metadata": {},
-     "execution_count": 19
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -599,16 +599,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 3 Population quantiles of standard distributions"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
-   "source": [],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -618,9 +618,9 @@
    "source": []
   },
   {
-   "source": [],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -630,9 +630,9 @@
    "source": []
   },
   {
-   "source": [],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -642,9 +642,9 @@
    "source": []
   },
   {
-   "source": [],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -654,9 +654,9 @@
    "source": []
   },
   {
-   "source": [],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -666,9 +666,9 @@
    "source": []
   },
   {
-   "source": [],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -678,9 +678,9 @@
    "source": []
   },
   {
-   "source": [],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -690,20 +690,28 @@
    "source": []
   },
   {
-   "source": [],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.3 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "ff1f241afc5a4c2e07811e38e6858495d05af165b3766e4314a3d7953c54c6af"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
