--- a/comp_book/A03_NumericalSummaries.ipynb
+++ b/comp_book/A03_NumericalSummaries.ipynb
@@ -28,11 +28,7 @@
  "cells": [
   {
    "source": [
-    "# A3: Numerical Summaries\n",
-    "\n",
-    "-----\n",
-    "\n",
-    "    2020-10-08"
+    "# A3. Numerical Summaries"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -287,13 +283,6 @@
     "fig1.set(xlabel=\"Weight change\",\n",
     "         title=\"Weight Change of Groups by Percentage\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
