--- a/Dev/20210102_NormalProbabilityPlots.ipynb
+++ b/Dev/20210102_NormalProbabilityPlots.ipynb
@@ -1232,13 +1232,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The points lie roughly along a straight line, suggesting that a normal model is plausible for the blood plasma nicotine levels of smokers."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Caveats\n",
     "\n",
     "- The $x$ and $y$ axis are flipped, compared to how they are presented in **M248**;\n",
@@ -1250,7 +1243,7 @@
     "These caveats are tolerable, given that the method:\n",
     "\n",
     "- has the same utility;\n",
-    "- removes a need to produce and maintain a bespoke `function`."
+    "- removes a need to produce and maintain a bespoke function."
    ]
   }
  ],
@@ -1270,7 +1263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
