--- a/comp_book/A05_SettlingDownDiscrete.ipynb
+++ b/comp_book/A05_SettlingDownDiscrete.ipynb
@@ -24,7 +24,7 @@
     "## References\n",
     "\n",
     "This notebook makes use of a modified function from the **scipy** website.\n",
-    "See the below references for the original implementations.\n",
+    "See the below references for the original implementation.\n",
     "\n",
     "- [scipy.stats.poisson](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.poisson.html)"
    ]
