--- a/comp_book/B2_NormalProbabilityPlots.ipynb
+++ b/comp_book/B2_NormalProbabilityPlots.ipynb
@@ -58,8 +58,7 @@
     "(See [documentation](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.probplot.html)).\n",
     "\n",
     "The method returns a tuple of arrays.\n",
-    "The data used to produce the plot is the 0th element of the tuple.\n",
-    "For example, using `res`, the data is stored in `res[0]`."
+    "The data used to produce the plot is the 0th element of the tuple."
    ]
   },
   {
@@ -104,7 +103,6 @@
     "> If `fit=False` and `plot=None`, this tuple is not returned.\n",
     "\n",
     "We are interested in the first tuple returned for this activity.\n",
-    "\n",
     "Let us append `res[0]` to two columns in a DataFrame."
    ],
    "cell_type": "markdown",
@@ -175,8 +173,8 @@
     "Let us now draw a residual plot of the original normal probability plot.\n",
     "\n",
     "Let us add a third column to our DataFrame holding the residual.\n",
-    "Recall that `residual = data - fit`, where `fit` = $a + bx$.\n",
-    "Here, our $x$ refers to the column `Quantiles` and $y$ to column `X`.\n"
+    "Recall that `residual = data - fit`, where `fit=a+bx`.\n",
+    "Here, `x` refers to the column `Quantiles`."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -217,8 +215,7 @@
     "                     x=\"X\",\n",
     "                     y=\"Residual\")\n",
     "# adjust the axes, set the title\n",
-    "ax1.set(xlim=(0, 650),\n",
-    "        title=\"Residual plot\")\n",
+    "ax1.set(xlim=(0, 650), title=\"Residual plot\")\n",
     "plt.show()"
    ]
   },
