init r, update py

--- a/nb/py/ca_04.ipynb
+++ b/nb/py/ca_04.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Computer Book A, Activity 4\n",
     "\n",
-    "Using `sns.countplot()` to plot a bar char of unaggregated data.\n",
-    "\n",
-    "Ref: "
+    "Using `sns.countplot()` to plot a bar chart of unaggregated data."
    ]
   },
   {
