--- a/nb/py/ca_06.ipynb
+++ b/nb/py/ca_06.ipynb
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Changing the order or the bars"
+    "## Changing the order of the bars"
    ]
   },
   {
