--- a/nb/py/ca_44.ipynb
+++ b/nb/py/ca_44.ipynb
@@ -58,7 +58,7 @@
     }
    ],
    "source": [
-    "def f1(x):\n",
+    "def f(x):\n",
     "    \"\"\"\n",
     "    The pdf of X.\n",
     "    \"\"\"\n",
@@ -73,7 +73,7 @@
     "fig, ax = plt.subplots()\n",
     "\n",
     "sns.lineplot(x=x,\n",
-    "             y=f1(x))  # calculates f(x) for each x in X\n",
+    "             y=f(x))  # calculates f(x) for each x in X\n",
     "\n",
     "ax.set(xlabel=\"x\",\n",
     "       ylabel=\"f(x)\")\n",
