--- a/projects/prem_league/notebooks/1-01-lk-out_epl1819_game_id.ipynb
+++ b/projects/prem_league/notebooks/1-01-lk-out_epl1819_game_id.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.1 Constructing data: epl_1819_game_id.csv\n",
+    "# 1.01 Data processing: epl_1819_game_id\n",
     "\n",
     "**date**\n",
     ": 2021-04-11\n",
@@ -49,7 +49,9 @@
    "source": [
     "# select columns\n",
     "df_out = df_in[[\n",
-    "    \"total_goal_count\", \"home_team_goal_timings\", \"away_team_goal_timings\"\n",
+    "    \"total_goal_count\",\n",
+    "    \"home_team_goal_timings\",\n",
+    "    \"away_team_goal_timings\"\n",
     "]].copy(deep=True)"
    ]
   },
