--- a/projects/prem_league/notebooks/1-04-lk-out_global_goal_times.ipynb
+++ b/projects/prem_league/notebooks/1-04-lk-out_global_goal_times.ipynb
@@ -134,8 +134,7 @@
    "outputs": [],
    "source": [
     "# adjust time by game_id * 90\n",
-    "df_out[\"global_goal_times\"] = (df_out[\"goal_times\"]\n",
-    "                               + (90 * df_out[\"game_ids\"]))"
+    "df_out[\"global_goal_times\"] = (df_out[\"goal_times\"] + (90 * df_out[\"game_ids\"]))"
    ]
   },
   {
@@ -299,13 +298,6 @@
     "# output file\n",
     "df_out.to_csv(Data.PATH_OUT + \"global_goal_times.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
