--- a/projects/prem_league/notebooks/1-02-lk-out_goals_per_game.ipynb
+++ b/projects/prem_league/notebooks/1-02-lk-out_goals_per_game.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.2 Constructing data: goals_per_game.csv\n",
+    "# 1.02 Data processing: goals_per_game\n",
     "\n",
     "**date**\n",
     ": 2021-04-11\n",
