--- a/projects/prem_league/notebooks/3-lk-goals_uniform.ipynb
+++ b/projects/prem_league/notebooks/3-lk-goals_uniform.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "## 1. Hypothesis\n",
     "\n",
-    "Let the hyotheses be that the number of goals scored in each 10 minutes period of normal time (so excluding goals in injury tme) during a football game is uniformly distributed with $m=10, n=90$, where the range is segmented into periods of 10 (so $\\{10, 20, 30, \\ldots\\}$)."
+    "Let the hyotheses be that the number of goals scored in each 10 minutes period of normal time (so excluding goals in injury times) during a football game is uniformly distributed with $m=10, n=90$, where the range is segmented into periods of 10 (so $\\{10, 20, 30, \\ldots\\}$)."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -219,13 +219,6 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
