--- a/projects/prem_league/notebooks/4-lk-home_scores_more.ipynb
+++ b/projects/prem_league/notebooks/4-lk-home_scores_more.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "source": [
-    "# Testing hypotheses: Goals are scored uniformly across the 90 mins\n",
+    "# Testing hypotheses: Expected number of goals by a home team is the same that of the away team\n",
     "\n",
     "**date**\n",
     ": 2021-04-12"
@@ -44,9 +44,7 @@
    "source": [
     "The source data was taken from [FootyStats](https://footystats.org/stats) and is concerned with the English Premier League 2018/19 season.\n",
     "The source data can be found in the `data/in` folder.\n",
-    "\n",
-    "The processed data used in this modelling can be found in the `data/out` folder.\n",
-    "Notebooks numbered **1.X** in this folder details the scripts written to process the source data into a usable format."
+    "The processed data used in this modelling can be found in `data/out/home_advantage.csv`."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -54,6 +52,8 @@
   {
    "source": [
     "## 1. Hypotheses\n",
+    "\n",
+    "In this report we will look at whether the expected number of goals scored by the home team is equal or greater then that of number of goals scored by their opponent, the away team.\n",
     "\n",
     "Let the hypotheses be\n",
     "\n",
@@ -74,7 +74,9 @@
     "## 2. Methodology\n",
     "\n",
     "The data will be described using a table of summary results, followed by plot of the average number of goals by home and away teams.\n",
-    "We then perform a $z$-test to test the hypotheses.\n",
+    "These are both added for illustration and no comment is given.\n",
+    "We then perform a $z$-test using the sample data to test the hypothesis that the expected number of goals scored by the home team is equal to that of the away team.\n",
+    "\n",
     "The data was extracted, analysed, and plotted using **Python**."
    ],
    "cell_type": "markdown",
@@ -120,7 +122,7 @@
   },
   {
    "source": [
-    "A side-by-side bar chart showing the number of goals scored by home and away teams is shown below."
+    "A side-by-side bar chart showing the frequency of the number of goals scored by home and away teams is shown below."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -148,13 +150,13 @@
   },
   {
    "source": [
-    "To perform a $z$-test, we require the $z$-value, which is defined as\n",
+    "We require the $z$-valueTo perform a $z$-test, which is defined as\n",
     "\n",
     "$$\n",
     "Z = \\frac{\\mu - \\mu_{0}}{S/\\sqrt{n}}.\n",
     "$$\n",
     "\n",
-    "In this study, we know that:\n",
+    "We know that:\n",
     "\n",
     "$\\mu = \\mu_{H} \\simeq \\overline{X}_{H} \\simeq 1.57$;\n",
     "\n",
@@ -164,13 +166,13 @@
     "\n",
     "$n = 380$.\n",
     "\n",
+    "*Note than in our calculations we used the exact values rather than the approximations as stated above.*\n",
+    "\n",
     "We can then restate the value for $Z$ as\n",
     "\n",
     "$$\n",
     "Z \\simeq \\frac{\\overline{X}_{H} - \\overline{X}_{A}}{S_{A}/\\sqrt{n}}.\n",
     "$$\n",
-    "\n",
-    "*Note than in our calculations we used the exact values rather than the approximations.*\n",
     "\n",
     "This will give us a $z$-value of approximately 5.22."
    ],
@@ -229,8 +231,9 @@
     "## 5. Discussion\n",
     "\n",
     "With a $p$-value < 0.0000001, there is very strong evidence against the null hypothesis.\n",
-    "We therefore reject the null hypothesis and conclude that the mean number of goals scored by the home team is not equal to mean number of goals scored by the away teams.\n",
-    "On the basis of the sample, it seems probable that the expected number of goals by the home team is greater than that of the away team."
+    "We therefore reject the null hypothesis and conclude that the expected number of goals scored by the home team is not equal to that of the away teams.\n",
+    "\n",
+    "On the basis of the sample, the expected number of goals by the home team is greater than that of the away team."
    ],
    "cell_type": "markdown",
    "metadata": {}
